--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <strong>We're sorry but megido72 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id=app></div>
-    <script src=/js/chunk-vendors.87761af7.js></script>
-    <script src=/js/app.a559d6c2.js></script>
+    <script src=./js/chunk-vendors.87761af7.js></script>
+    <script src=./js/app.a559d6c2.js></script>
 </body>
 
 </html>
