--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=/favicon.ico>
     <title>megido72</title>
-    <link as=style href=./css/app.d640c400.css rel=preload>
-    <link as=style href=./css/chunk-vendors.aed9c24b.css rel=preload>
-    <link as=script href=./js/app.a559d6c2.js rel=preload>
-    <link as=script href=./js/chunk-vendors.87761af7.js rel=preload>
-    <link href=./css/about.11ffff6b.css rel=prefetch>
-    <link href=./js/about.5cc3f7ce.js rel=prefetch>
-    <link href=./css/chunk-vendors.aed9c24b.css rel=stylesheet>
-    <link href=./css/app.d640c400.css rel=stylesheet>
+    <link as=style href=/css/app.d640c400.css rel=preload>
+    <link as=style href=/css/chunk-vendors.aed9c24b.css rel=preload>
+    <link as=script href=/js/app.01fbe5c0.js rel=preload>
+    <link as=script href=/js/chunk-vendors.87761af7.js rel=preload>
+    <link href=/css/about.11ffff6b.css rel=prefetch>
+    <link href=/js/about.5cc3f7ce.js rel=prefetch>
+    <link href=/css/chunk-vendors.aed9c24b.css rel=stylesheet>
+    <link href=/css/app.d640c400.css rel=stylesheet>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     </noscript>
     <div id=app></div>
     <script src=/js/chunk-vendors.87761af7.js></script>
-    <script src=/js/app.a559d6c2.js></script>
+    <script src=/js/app.01fbe5c0.js></script>
 </body>
 
 </html>
