--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=mgdfan/favicon.ico>
     <title>megido72</title>
-    <link as=style href=mgdfan/css/app.d640c400.css rel=preload>
-    <link as=style href=mgdfan/css/chunk-vendors.aed9c24b.css rel=preload>
-    <link as=script href=mgdfan/js/app.0ef1c7c6.js rel=preload>
-    <link as=script href=mgdfan/js/chunk-vendors.87761af7.js rel=preload>
-    <link href=mgdfan/css/about.11ffff6b.css rel=prefetch>
-    <link href=mgdfan/js/about.5cc3f7ce.js rel=prefetch>
-    <link href=mgdfan/css/chunk-vendors.aed9c24b.css rel=stylesheet>
-    <link href=mgdfan/css/app.d640c400.css rel=stylesheet>
+    <link as=style href=/mgdfan/css/app.d640c400.css rel=preload>
+    <link as=style href=/mgdfan/css/chunk-vendors.aed9c24b.css rel=preload>
+    <link as=script href=/mgdfan/js/app.0ef1c7c6.js rel=preload>
+    <link as=script href=/mgdfan/js/chunk-vendors.87761af7.js rel=preload>
+    <link href=/mgdfan/css/about.11ffff6b.css rel=prefetch>
+    <link href=/mgdfan/js/about.5cc3f7ce.js rel=prefetch>
+    <link href=/mgdfan/css/chunk-vendors.aed9c24b.css rel=stylesheet>
+    <link href=/mgdfan/css/app.d640c400.css rel=stylesheet>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
         <strong>We're sorry but megido72 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id=app></div>
-    <script src=mgdfan/js/chunk-vendors.87761af7.js></script>
-    <script src=mgdfan/js/app.0ef1c7c6.js></script>
+    <script src=/mgdfan/js/chunk-vendors.87761af7.js></script>
+    <script src=/mgdfan/js/app.0ef1c7c6.js></script>
 </body>
 
 </html>
