--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico>
+    <link rel=icon href=/mgdfan/favicon.ico>
     <title>megido72</title>
-    <link as=style href=/css/app.235971f4.css rel=preload>
-    <link as=style href=/css/chunk-vendors.e40b977d.css rel=preload>
-    <link as=script href=/js/app.aa4b61d9.js rel=preload>
-    <link as=script href=/js/chunk-vendors.d46e91f2.js rel=preload>
-    <link href=/css/chunk-vendors.e40b977d.css rel=stylesheet>
-    <link href=/css/app.235971f4.css rel=stylesheet>
+    <link as=style href=/mgdfan/css/app.235971f4.css rel=preload>
+    <link as=style href=/mgdfan/css/chunk-vendors.e40b977d.css rel=preload>
+    <link as=script href=/mgdfan/js/app.aa4b61d9.js rel=preload>
+    <link as=script href=/mgdfan/js/chunk-vendors.d46e91f2.js rel=preload>
+    <link href=/mgdfan/css/chunk-vendors.e40b977d.css rel=stylesheet>
+    <link href=/mgdfan/css/app.235971f4.css rel=stylesheet>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
         <strong>We're sorry but megido72 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id=app></div>
-    <script src=/js/chunk-vendors.d46e91f2.js></script>
-    <script src=/js/app.aa4b61d9.js></script>
+    <script src=/mgdfan/js/chunk-vendors.d46e91f2.js></script>
+    <script src=/mgdfan/js/app.aa4b61d9.js></script>
 </body>
 
 </html>
