--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico>
-    <title>megido72</title>
-    <link as=style href=/css/app.d01e0315.css rel=preload>
-    <link as=style href=/css/chunk-vendors.e40b977d.css rel=preload>
-    <link as=script href=/js/app.e327904f.js rel=preload>
-    <link as=script href=/js/chunk-vendors.d46e91f2.js rel=preload>
-    <link href=/css/chunk-vendors.e40b977d.css rel=stylesheet>
-    <link href=/css/app.d01e0315.css rel=stylesheet>
-</head>
-
-<body>
-    <noscript>
-        <strong>We're sorry but megido72 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id=app></div>
-    <script src=/js/chunk-vendors.d46e91f2.js></script>
-    <script src=/js/app.e327904f.js></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>megido72</title><link as=style href=/css/app.82650a8a.css rel=preload><link as=style href=/css/chunk-vendors.ccc92a17.css rel=preload><link as=script href=/js/app.26271e36.js rel=preload><link as=script href=/js/chunk-vendors.26d8790a.js rel=preload><link href=/css/chunk-171c.6f841fce.css rel=prefetch><link href=/css/chunk-50ad.2c82fd7d.css rel=prefetch><link href=/css/chunk-75ec.2c82fd7d.css rel=prefetch><link href=/css/chunk-fb1f.af4da5e8.css rel=prefetch><link href=/js/chunk-171c.66707dd6.js rel=prefetch><link href=/js/chunk-50ad.382c56c5.js rel=prefetch><link href=/js/chunk-75ec.5d0052a7.js rel=prefetch><link href=/js/chunk-7695.24e61f58.js rel=prefetch><link href=/js/chunk-fb1f.baa74c52.js rel=prefetch><link href=/css/chunk-vendors.ccc92a17.css rel=stylesheet><link href=/css/app.82650a8a.css rel=stylesheet></head><body><noscript><strong>We're sorry but megido72 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.26d8790a.js></script><script src=/js/app.26271e36.js></script></body></html>
